--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -10,7 +10,7 @@
 
     {{ form_row(form.pseudo) }}
     {{ form_row(form.email) }}
-    {{ form_row(form.mdp) }}
+    {{ form_row(form.mdpClair) }}
     {{ form_row(form.ville) }}
     {{ form_row(form.genre) }}
 
