--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,38 +1,51 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}
-            <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}
-        <main class="container">
+<!doctype html>
+<html lang="fr">
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-            {# pour l'affichage des messages flash #}
-            {% for type, messages in app.session.flashBag.all %}
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+          integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="cine_mamies.css">
+    <title>Vos matchs!</title>
+    <link rel="icon" href="img/logo.jpg"/>
+</head>
 
-                {# pour la class alert-danger de bootstrap#}
-                {%  if type == 'error' %}
-                    {% set type = 'danger' %}
-                {% endif %}
+{% block body %}
+<main class="container">
 
-                {% for message in messages %}
-                    <div class="alert alert-{{ type }} mt-2">
-                        {{ message|raw }}
-                    </div>
-                {% endfor %}
-            {% endfor %}
+    {# pour l'affichage des messages flash #}
+    {% for type, messages in app.session.flashBag.all %}
+
+        {# pour la class alert-danger de bootstrap#}
+        {% if type == 'error' %}
+            {% set type = 'danger' %}
+        {% endif %}
+
+        {% for message in messages %}
+            <div class="alert alert-{{ type }} mt-2">
+                {{ message|raw }}
+            </div>
+        {% endfor %}
+    {% endfor %}
 
 
-            {% endblock %}
-        </main>
-        {% block javascripts %}
-            <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-            <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-        {% endblock %}
-    </body>
+    {% endblock %}
+</main>
+
+{% block javascripts %}
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+            integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+            crossorigin="anonymous"></script>
+{% endblock %}
+
+</body>
 </html>
