--- a/templates/suggestion/index.html.twig
+++ b/templates/suggestion/index.html.twig
@@ -3,34 +3,20 @@
 {% block title %} Utilisateurs {% endblock %}
 
 {% block body %}
-        {% for user in users %}
-        <tr>
-            <td>{{ user.pseudo }}</td>
-            <td>{{ user.email }}</td>
-{#            <td>{{ user.ville }}</td>#}
-        </tr>
-        {% endfor %}
+    {#        {% for user in users %}#}
+    {#        <tr>#}
+    {#            <td>{{ user.pseudo }}</td>#}
+    {#            <td>{{ user.email }}</td>#}
+    {#            <td>{{ user.ville }}</td>#}
+    {#        </tr>#}
+    {#        {% endfor %}#}
 
-{#    <a class="nav-link" href="{{ path('app_category_index', {'id': category.id}) }}">
-        {{ category.name }}
-    </a>
+    {#    <a class="nav-link" href="{{ path('app_category_index', {'id': category.id}) }}">#}
+    {#        {{ category.name }}#}
+    {#    </a>#}
 
-    <!doctype html>
-    <html lang="fr">
-    <head>
-        <!-- Required meta tags -->
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-        <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-              integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-        <link rel="stylesheet" href="cine_mamies.css">
-        <title>Vos matchs!</title>
-        <link rel="icon" href="img/logo.jpg"/>
-    </head>
     <body>
-    <container>
+    <div class="container">
 
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" href="#">FilmAmi</a>
@@ -127,20 +113,8 @@
             <H4>Nos réseaux sociaux</H4>
             <h4>Contactez-nous !</h4>
         </footer>
-    </container>
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-            crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-            crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-            integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-            crossorigin="anonymous"></script>
+    </div>
     </body>
-    </html>#}
+    </html>
 
 {% endblock %}
