--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,12 +8,11 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="stylesheet" href="cine_mamies.css">
     <title>Vos matchs!</title>
-    <link rel="icon" href="img/logo.jpg"/>
+
 </head>
 
-{% block body %}
+
 <main class="container">
 
     {# pour l'affichage des messages flash #}
@@ -31,8 +30,20 @@
         {% endfor %}
     {% endfor %}
 
-
-    {% endblock %}
+    {% block body %}{% endblock %}
+        {#    footer html #}
+    <footer>
+        <h4>Nos réseaux sociaux:</h4>
+        <div class="row">
+            <a href="https://twitter.com/"><img src="img/logo_twitter.png" alt=""></a>
+            <a href="https://www.instagram.com/"><img src=img/logo_instagram.png alt=""></a>
+            <a href="https://www.facebook.com/"><img src="img/logo_facebook.png" alt=""></a>
+        </div>
+        <br>
+        <h4>Contactez-nous !</h4>
+        <br>
+        <h5> Copyright &copy;Filmami 2020</h5>
+    </footer>
 </main>
 
 {% block javascripts %}
