--- a/templates/suggestion/index.html.twig
+++ b/templates/suggestion/index.html.twig
@@ -30,7 +30,7 @@
                         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Mes matchs</a>
+                        <a class="nav-link" href="#">Suggestions</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Mon profil</a>
@@ -107,14 +107,7 @@
 
             </div>
         </div>
-
-        <footer>
-            <H3> Copyright @ Ciné-mamie!</H3>
-            <H4>Nos réseaux sociaux</H4>
-            <h4>Contactez-nous !</h4>
-        </footer>
     </div>
     </body>
-    </html>
 
 {% endblock %}
