--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <title>Vos matchs!</title>
+    <title>Filmami</title>
 
 </head>
 
@@ -31,6 +31,7 @@
     {% endfor %}
 
     {% block body %}{% endblock %}
+
         {#    footer html #}
     <footer>
         <h4>Nos réseaux sociaux:</h4>
