--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -17,7 +17,7 @@
 
                 <!--            Formulaire de connexion A MODIFIER POUR QU IL FONCTIONNE -->
                 <div class=" formconnex">
-                    <form class="form-inline">
+                    <form class="form-inline" action="{{ path('app_index_connexion') }}" method="post">
                         <img class="logo" src="img/logo12.jpg" alt="">
                         <div class="form-group mb-2">
                             <label for="staticEmail2" class="sr-only">Email</label>
@@ -26,11 +26,11 @@
                         </div>
                         <div class="form-group mx-sm-3 mb-2">
                             <label for="inputPassword2" class="sr-only">Pseudo</label>
-                            <input type="password" class="form-control" id="inputPasswo" placeholder="Pseudo">
+                            <input type="email" class="form-control" name="_username" value="" placeholder="Email">
                         </div>
                         <div class="form-group mx-sm-3 mb-2">
                             <label for="inputPassword2" class="sr-only">Mot de Passe</label>
-                            <input type="password" class="form-control" id="inputPassword2" placeholder="Mot de Passe">
+                            <input type="password" class="form-control" name="_password" placeholder="Mot de Passe">
                         </div>
                         <button type="submit" class="btn btn-dark mb-2">Se connecter</button>
                     </form>
@@ -142,5 +142,6 @@
 {#    <button type="submit">Enregistrer</button>#}
 
 {#    {{ form_end(form) }}#}
+
 
 {% endblock %}
