--- a/templates/suggestion/index.html.twig
+++ b/templates/suggestion/index.html.twig
@@ -36,7 +36,7 @@
                         <a class="nav-link" href="#">Mon profil</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link nav-link2" href="#">Bonjour Davy !</a>
+                        <a class="nav-link nav-link2" href="#">Bonjour {{ app.user }} !</a>
                     </li>
                 </ul>
             </div>
