--- a/templates/suggestion/index.html.twig
+++ b/templates/suggestion/index.html.twig
@@ -1,5 +1,9 @@
 {% extends 'base.html.twig' %}
 
+{% block javascripts %}
+    <link rel="stylesheet" href="{{ asset('css/suggestions.css') }}" type="text/css">
+{% endblock %}
+
 {% block title %} Utilisateurs {% endblock %}
 
 {% block body %}
@@ -73,8 +77,57 @@ pouvez vous mettre chaque 3 à la ligne ?     #}
                                 <tr>
                                     <a href="#" class="btn btn-dark">Voir le profil</a>
                                 </tr>
-{#Front, j'ai mis une espèce en br entre les boutons, il vaut mieux faire qq chose plus jolie ? #}
-                                <br><br>
+                                <hr>
+                                <tr>
+                                    <a href="#" class="btn btn-dark">Envoyer un mail: {{ user.email }}</a>
+                                </tr>
+                            </div>
+                        </div>
+                        <div class="card" style="width: 18rem;">
+                            <img src="../img/placeholder.jpg" class="card-img-top" alt="...">
+                            {#<img src="{{ asset('../img/placeholder.jpg') }}" alt="">#}
+                            <div class="card-body">
+                                <tr>
+                                    <h5 class="card-title">{{ user.pseudo }}</h5>
+                                </tr>
+                                <tr>
+                                    <h5 class="card-title">{{ user.ville.nom }}</h5>
+                                </tr>
+                                <tr>
+                                    <h5 class="card-title">{{ user.genre.type }}</h5>
+                                </tr>
+                                <tr>
+                                    <p class="card-text">Ici la zone de cours texte du champ "A propos"</p>
+                                </tr>
+                                <tr>
+                                    <a href="#" class="btn btn-dark">Voir le profil</a>
+                                </tr>
+                                <hr>
+                                <tr>
+                                    <a href="#" class="btn btn-dark">Envoyer un mail: {{ user.email }}</a>
+                                </tr>
+                            </div>
+                        </div>
+                        <div class="card" style="width: 18rem;">
+                            <img src="../img/placeholder.jpg" class="card-img-top" alt="...">
+                            {#<img src="{{ asset('../img/placeholder.jpg') }}" alt="">#}
+                            <div class="card-body">
+                                <tr>
+                                    <h5 class="card-title">{{ user.pseudo }}</h5>
+                                </tr>
+                                <tr>
+                                    <h5 class="card-title">{{ user.ville.nom }}</h5>
+                                </tr>
+                                <tr>
+                                    <h5 class="card-title">{{ user.genre.type }}</h5>
+                                </tr>
+                                <tr>
+                                    <p class="card-text">Ici la zone de cours texte du champ "A propos"</p>
+                                </tr>
+                                <tr>
+                                    <a href="#" class="btn btn-dark">Voir le profil</a>
+                                </tr>
+                                <hr>
                                 <tr>
                                     <a href="#" class="btn btn-dark">Envoyer un mail: {{ user.email }}</a>
                                 </tr>
