--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -25,13 +25,14 @@
                                    value="Déjà membre ?">
                         </div>
                         <div class="form-group mx-sm-3 mb-2">
-                            <label for="inputPassword2" class="sr-only">Pseudo</label>
+                            <label for="inputPassword2" class="sr-only">E-mail</label>
                             <input type="email" class="form-control" name="_username" value="" placeholder="Email">
                         </div>
                         <div class="form-group mx-sm-3 mb-2">
                             <label for="inputPassword2" class="sr-only">Mot de Passe</label>
                             <input type="password" class="form-control" name="_password" placeholder="Mot de Passe">
                         </div>
+                        <input type="hidden" name="_target_path" value="{{ path('app_suggestion_index') }}">
                         <button type="submit" class="btn btn-dark mb-2">Se connecter</button>
                     </form>
                 </div>
