--- a/templates/profil/index.html.twig
+++ b/templates/profil/index.html.twig
@@ -8,7 +8,14 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col border border-dark">
-
+        </div>
+    </div>
+    <div class="row">
+        <div class="col border border-dark">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col border border-dark">
         </div>
     </div>
 
