--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -26,6 +26,7 @@
                             <label for="inputPassword2" class="sr-only">Mot de Passe</label>
                             <input type="password" class="form-control" id="inputPassword2" placeholder="Mot de Passe">
                         </div>
+                        <input type="hidden" name="_target_path" value="{{ path('app_suggestion_index') }}">
                         <button type="submit" class="btn btn-dark mb-2">Se connecter</button>
                     </form>
                 </div>
