Derniere version accueil pour corriger probleme de formulaire et de carousel

--- a/templates/profil/index.html.twig
+++ b/templates/profil/index.html.twig
@@ -8,6 +8,8 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col border border-dark">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum impedit nisi possimus quia. Aspernatur cum debitis dolor, id molestias quas! A incidunt mollitia recusandae veniam voluptatibus. Accusantium illo rerum unde.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusamus aliquid aperiam blanditiis consequuntur doloremque et fuga magnam minus, mollitia nam neque numquam porro quidem rem similique ullam ut? Pariatur.</p>
         </div>
     </div>
     <div class="row">
