--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -19,12 +19,12 @@
                     <form class="form-inline">
                         <div class="form-group mb-2">Déjà membre ?</div>
                         <div class="form-group mx-sm-3 mb-2">
-                            <label for="inputPassword2" class="sr-only">Pseudo</label>
-                            <input type="password" class="form-control" id="inputPasswo" placeholder="Pseudo">
+                            <label for="inputPassword2" class="sr-only"></label>
+                            <input type="email" class="form-control" name="_username" placeholder="Email">
                         </div>
                         <div class="form-group mx-sm-3 mb-2">
-                            <label for="inputPassword2" class="sr-only">Mot de Passe</label>
-                            <input type="password" class="form-control" id="inputPassword2" placeholder="Mot de Passe">
+                            <label for="inputPassword2" class="sr-only"></label>
+                            <input type="password" class="form-control" name="_password" placeholder="Mot de Passe">
                         </div>
                         <input type="hidden" name="_target_path" value="{{ path('app_suggestion_index') }}">
                         <button type="submit" class="btn btn-dark mb-2">Se connecter</button>
