--- a/public/css/filmami_accueil.css
+++ b/public/css/filmami_accueil.css
@@ -6,6 +6,7 @@ body {
     display: flex;
     justify-content: space-between;
     margin-bottom: 20px;
+    margin-top: 20px;
 }
 
 /*           BANNIERE   */
@@ -47,6 +48,13 @@ footer {
     background-color: black;
     color: white;
     margin-top: 80px;
+}
+
+@media only screen and (max-width: 1300px) {
+    #inscription_pseudo{
+        width: 90%;
+        height: 90%;
+    }
 }
 
 
