--- a/templates/profil/index.html.twig
+++ b/templates/profil/index.html.twig
@@ -12,9 +12,9 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusamus aliquid aperiam blanditiis consequuntur doloremque et fuga magnam minus, mollitia nam neque numquam porro quidem rem similique ullam ut? Pariatur.</p>
         </div>
     </div>
-    <div class="row">
         <div class="col border border-dark">
-        </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum impedit nisi possimus quia. Aspernatur cum debitis dolor, id molestias quas! A incidunt mollitia recusandae veniam voluptatibus. Accusantium illo rerum unde.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusamus aliquid aperiam blanditiis consequuntur doloremque et fuga magnam minus, mollitia nam neque numquam porro quidem rem similique ullam ut? Pariatur.</p>
     </div>
     <div class="row">
         <div class="col border border-dark">
