--- a/public/css/filmami_accueil.css
+++ b/public/css/filmami_accueil.css
@@ -7,6 +7,7 @@ body {
     justify-content: space-between;
     margin-bottom: 20px;
     margin-top: 20px;
+
 }
 
 /*           BANNIERE   */
@@ -50,12 +51,10 @@ footer {
     margin-top: 80px;
 }
 
-@media only screen and (max-width: 1300px) {
-    #inscription_pseudo{
-        width: 90%;
-        height: 90%;
-    }
-}
+@media (max-width: 1300px)  {
+.col-4{
+    background-color: blue;
+}}
 
 
 
