--- a/templates/suggestion/index.html.twig
+++ b/templates/suggestion/index.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block javascripts %}
+    {{ parent() }}
     <link rel="stylesheet" href="{{ asset('css/suggestions.css') }}" type="text/css">
 {% endblock %}
 
@@ -9,31 +10,6 @@
 {% block body %}
     <br><br><br>
 <div class="container">
-
-{#Front, ça c'est le navbar globale#}
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">FilmAmi</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="{{ path('app_index_index') }}">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ path('app_suggestion_index') }}">Suggestions</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ path('app_profil_index') }}">Mon profil</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link nav-link2" href="#">Bonjour Davy !</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
 
     <div class="row">
         <div class="col-1"></div>
