--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,10 +28,10 @@
                 <a class="nav-link" href="{{ path('app_profil_index') }}">Mon profil</a>
             </li>
             <li class="nav-item">
-                <a class="dl_bonjour nav-link nav-link2" href="#">Bonjour Davy !</a>
+                <a class="dl_bonjour nav-link nav-link2" href="#">Bonjour {{ app.user }} !</a>
             </li>
             <li class="nav-item">
-                <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Déconnexion</button>
+                <button class="btn btn-outline-light my-2 my-sm-0" type="submit"><a href="{{ path('app_index_logout') }}">Déconnexion</a></button>
             </li>
         </ul>
     </div>
