Modification de la UserRepository

--- a/templates/suggestion/index.html.twig
+++ b/templates/suggestion/index.html.twig
@@ -59,5 +59,8 @@
                     {% endfor %}
             </div>
         </div>
+        <form method="post">
+            <button type="submit" class="btn btn-primary mb-2">Voir plus de résultats</button>
+        </form>
     </div>
     {% endblock %}
