--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,13 +27,23 @@
             <li class="nav-item">
                 <a class="nav-link" href="{{ path('app_profil_index') }}">Mon profil</a>
             </li>
-            <li class="nav-item">
+            {#<li class="nav-item">
                 <a class="dl_bonjour nav-link nav-link2" href="#">Bonjour {{ app.user }} !</a>
             </li>
             <li class="nav-item">
                 <button class="btn btn-outline-light my-2 my-sm-0" type="submit"><a href="{{ path('app_index_logout') }}">Déconnexion</a></button>
-            </li>
+            </li>#}
         </ul>
+        <div class="bonjour">
+            <div>
+                <a class="nav-item nav-link nav-link2" href="#">Bonjour {{ app.user }} !</a>
+
+            </div>
+            <div>
+                <button class="nav-item btn btn-outline-light my-2 my-sm-0" type="submit"><a href="{{ path('app_index_logout') }}">Déconnexion</a></button>
+
+            </div>
+        </div>
     </div>
 </nav>
 {#         ///////        FIN    NAVBAR                ///////               #}
