--- a/public/css/suggestions.css
+++ b/public/css/suggestions.css
@@ -1,8 +1,18 @@
 
-.navbar {
-
+/*  NAVBAR   */
+.navbar-collapse {
+    display: flex;
+    justify-content: space-between;
 }
-
+.nav-item {
+    color: white;
+}
+a {
+    color: white;
+}
+.bonjour {
+    display: flex;
+}
 .card {
     margin-bottom: 30px;
 }
