--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,7 +9,43 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <title>Filmami</title>
 </head>
-{#         ///////         NAVBAR                ///////               #}
+{#         ///////         NAVBAR    ADMIN            ///////               #}
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <a class="navbar-brand" href="{{ path('app_index_index') }}">FilmAmi</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link" href="{{ path('app_index_index') }}">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{{ path('app_suggestion_index') }}">Suggestions</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{{ path('app_profil_index') }}">Mon profil</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{{ path('app_admin_ville_index') }}">Villes</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{{ path('app_admin_genre_index') }}">Genre de films</a>
+            </li>
+        </ul>
+        <div class="bonjour">
+            <div>
+                <a class="nav-item nav-link nav-link2" href="#">Bonjour {{ app.user }} !</a>
+            </div>
+            <div>
+                <button class="nav-item btn btn-outline-light my-2 my-sm-0" type="submit"><a href="{{ path('app_index_logout') }}">Déconnexion</a></button>
+            </div>
+        </div>
+    </div>
+</nav>
+{#         ///////        FIN    NAVBAR   ADMIN             ///////               #}
+{#         ///////         NAVBAR   PUBLIC             ///////               #}
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="{{ path('app_index_index') }}">FilmAmi</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
@@ -27,26 +63,18 @@
             <li class="nav-item">
                 <a class="nav-link" href="{{ path('app_profil_index') }}">Mon profil</a>
             </li>
-            {#<li class="nav-item">
-                <a class="dl_bonjour nav-link nav-link2" href="#">Bonjour {{ app.user }} !</a>
-            </li>
-            <li class="nav-item">
-                <button class="btn btn-outline-light my-2 my-sm-0" type="submit"><a href="{{ path('app_index_logout') }}">Déconnexion</a></button>
-            </li>#}
         </ul>
         <div class="bonjour">
             <div>
                 <a class="nav-item nav-link nav-link2" href="#">Bonjour {{ app.user }} !</a>
-
             </div>
             <div>
                 <button class="nav-item btn btn-outline-light my-2 my-sm-0" type="submit"><a href="{{ path('app_index_logout') }}">Déconnexion</a></button>
-
             </div>
         </div>
     </div>
 </nav>
-{#         ///////        FIN    NAVBAR                ///////               #}
+{#         ///////        FIN    NAVBAR    PUBLIC            ///////               #}
 <main class="container-fluid">
 
     {# pour l'affichage des messages flash #}
