--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -18,17 +18,16 @@
                     <img class="logo" src="img/logo12.jpg" alt="">
                     <form class="form-inline" action="{{ path('app_index_connexion') }}" method="post">
                         <div class="form-group mb-2">Déjà membre ?</div>
-
                         <div class="form-group mx-sm-3 mb-2">
-                            <label for="inputPassword2" class="sr-only">Pseudo</label>
-                            <input type="email" class="form-control" name="_username" value="" placeholder="Email">
+                            <label for="inputPassword2" class="sr-only">Email</label>
+                            <input type="email" class="form-control" name="_username" value="" placeholder="Email" id="emailco">
                         </div>
                         <div class="form-group mx-sm-3 mb-2">
                             <label for="inputPassword2" class="sr-only">Mot de Passe</label>
-                            <input type="password" class="form-control" name="_password" placeholder="Mot de Passe">
+                            <input type="password" class="form-control" name="_password" placeholder="Mot de Passe" id="mdpco">
                         </div>
                         <input type="hidden" name="_target_path" value="{{ path('app_suggestion_index') }}">
-                        <button type="submit" class="btn btn-dark mb-2">Se connecter</button>
+                        <button type="submit" class="btn btn-dark mb-2" id="btnco">Se connecter</button>
                     </form>
                 </div>
             </div>
@@ -114,7 +113,9 @@
             </span>
                 <br>
                     <div class="row">
+                        <div class="formco">
                     <div class="col-7">
+
                         <!--          Formulaire d'inscription -->
                         <div class="card-body">
                             {{ form_start(form) }}
@@ -124,9 +125,11 @@
                             <div class="col-md-8 p-1">{{ form_row(form.email) }}</div>
                             <div class="col-md-8 p-1">{{ form_row(form.mdpClair) }}</div>
                             <br>
-                            <button type="submit" class="btn btn-dark col-md-8 p-1">Inscription</button>
-                            {{ form_end(form) }}
+                            <button type="submit" class="btn btn-dark col-md-8 p-1" id="bigscreen">Inscription</button>
                         </div>
+                    </div>
+                            <button type="submit" class="btn btn-dark col-md-8 p-1" id="smallscreen">Inscription</button>
+                            {{ form_end(form) }}
                     </div>
                 </div>
             </div>
