--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -3,6 +3,7 @@
 {% block javascripts %}
     {{ parent() }}
     <link rel="stylesheet" href="{{ asset('css/filmami_accueil.css') }}" type="text/css">
+    <link rel="stylesheet" href="{{ asset('css/filmami_commun.css') }}">
 {% endblock %}
 
 {% block title %}Formulaire d'inscription{% endblock %}
