--- a/templates/profil/index.html.twig
+++ b/templates/profil/index.html.twig
@@ -10,9 +10,9 @@
 
 {% block body %}
 
+    <div class="container-fluid">
 
     <div class="row">
-        <div class="col-1"></div>
         <div class="col-1">
             <img class="logo" src="{{ asset('img/logo12.jpg') }}" alt="">
         </div>
@@ -46,7 +46,7 @@
         </div>
     </div>
 
+        <!-------- Fin container -------->
+    </div>
 
-{#    Fin container fluid#}
-</div>
 {% endblock %}
